:white_check_mark: (ft): formatted files

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-terser": "^5.2.0"
   },
-  "bundlesize": [{
+  "bundlesize": [
+    {
       "path": "bundle-cjs/**/*.js"
     },
     {
